Fixed message word wrap issue.

--- a/media/css/lcb/chat.less
+++ b/media/css/lcb/chat.less
@@ -171,6 +171,9 @@ body {
 		&:last-child {
 			border-bottom: none;
 		}
+		.text {
+			word-wrap: break-word;
+		}
 		.side {
 			margin-right: 7px;
 			float: left;
